<resources>
    <string name="about">О приложении</string>
    <string name="about_content">"Удобное и функциональное приложение для тех, кто хочет быстро и выгодно заказать такси в Петропавловске, Кокшетау, Караганде, Щучинске и Мамлютке.
 Устанавливая наше приложение, Вы получаете ряд преимуществ при заказе такси:
 ☆ точный расчет стоимости заказа в приложении до посадки в такси.
 ☆ фиксированная цена, которая не изменится, если Вы попадете в пробку.
 ☆ Вы видите статус исполнения заказа такси в режиме онлайн, а также получаете голосовое уведомление на разных этапах обработки заказа."</string>
    <string name="about_copyright">© Команда ТаксиKz</string>
    <string name="accept">Применить</string>
    <string name="action_settings">Настройки</string>
    <string name="action_settings_my">ТаксиKz Настройки</string>
    <string name="action_share">Рассказать другу</string>
    <string name="action_share_content">TaxiKZ- удобное приложение для заказа такси. Бонусы, скидки и никакого ожидания в очереди. Заказ создается в пару кликов! #TaxiKzKz</string>
    <string name="activate_btn_hint">Активировать</string>
    <string name="activate_secondary_code">Ваш код:</string>
    <string name="activate_secondary_device">Активировать %s</string>
    <string name="activate_secondary_enter">Введите его на своем %s</string>
    <string name="activation_code_call_get_txt">Если вы не знаете ваш пароль, получите его по смс</string>
    <string name="activation_code_sms_sent">Вам отправлено SMS с кодом.</string>
    <string name="activation_code_sms_wait">"Его доставка может занять до одной минуты,
благодарим за терпение."</string>
    <string name="activation_edittext_hint">Код активации</string>
    <string name="activation_enter_code_hint">Введите код здесь</string>
    <string name="activation_got_code">Похоже, что-то пошло не так. Если вы знаете ваш пароль, введите его и нажмите Войти</string>
    <string name="activation_sms_code_btn">Получить смс</string>
    <string name="activation_sms_get_counter">Получить смс %s</string>
    <string name="address_activity_title">Адрес</string>
    <string name="address_auto_complete_street">%1$s %2$s</string>
    <string name="address_caption">Откуда</string>
    <string name="address_deleted">Адрес удален</string>
    <string name="address_dialog_content">Вы действительно хотите удалить этот адрес?</string>
    <string name="address_dialog_title">Удаление адреса</string>
    <string name="address_fragment_address_hint">Введите адрес</string>
    <string name="address_fragment_autocomplete_point">пункт</string>
    <string name="address_fragment_autocomplete_street">улица</string>
    <string name="address_fragment_house_hint">Номер дома</string>
    <string name="address_fragment_porch_hint">Подъезд</string>
    <string name="address_fragment_select_button">ОК</string>
    <string name="address_hint">Улица, проспект, площадь</string>
    <string name="address_stop_caption">Пункт остановки</string>
    <string name="android.order">Заказ с программы</string>
    <string name="app_name">ТаксиKz</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bonus.accumulate">Накоплено бонусов %1$s₸</string>
    <string name="bonus.availability">Бонусов %1$s₸</string>
    <string name="bonus.description">Бонусная система разработана для поощрения наших постоянных клиентов. Она позволяет накапливать бонусы, которыми Вы сможете оплачивать свои последующие заказы. Размер оплаты заказа бонусами можно регулировать самостоятельно. Это значит, что Вы сами определяете, сколько бонусов хотите потратить.</string>
    <string name="bonus.description.with.limit">&lt;br>&lt;br>Что-бы начать тратить бонусы их должно быть больше &lt;b>%1$s&lt;/b></string>
    <string name="bonus.dialog.title">Сколько бонусов вы хотите потратить?</string>
    <string name="bonus.not.availabile.description">Вы уже создали ранее заказ с использованием бонусов, и этот заказ еще не завершен. Для новых заказов бонусы станут доступны сразу после завершения текущего заказа</string>
    <string name="bonus.not.availabile.title">Бонусы не доступны</string>
    <string name="bonus.spend">Потратить бонусы %1$s₸</string>
    <string name="bonus.title">Бонусная система</string>
    <string name="bonus.used">Использовано бонусов %1$s₸</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cabs_phone_number">"Тел водителя: "</string>
    <string name="cancel">Отмена</string>
    <string name="cannot.create.order">Не удалось создать заказ. К сожалению, произошла ошибка. Попробуйте еще раз.</string>
    <string name="car_caption">"Машина: "</string>
    <string name="car_data">"%1$s %2$s
Номер машины: %3$s"</string>
    <string name="car_number_caption">", гос номер: "</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="choice_town">Город: <b>%1$s</b>" "</string>
    <string name="comment_hint">Комментарии</string>
    <string name="communicate">Коммуникация</string>
    <string name="count_price_dialog_title">Считается стоимость проезда</string>
    <string name="credits_button_text">Credits</string>
    <string name="credits_cc_license_link">Creative Commons (&lt;a href=http://creativecommons.org/licenses/by/3.0/legalcode>CC BY 3.0&lt;/a>)</string>
    <string name="credits_icons_area_caption">Icons made by:</string>
    <string name="credits_other_area_caption">Other:</string>
    <string name="delete.order.confirm.title">Отменить заказ</string>
    <string name="delete_order_confirm_message">Вы действительно хотите отменить заказ?</string>
    <string name="dialog_105_cancel_btn">Изменить</string>
    <string name="dialog_105_message">"Это ваш правильный номер?

%s

Сейчас мы позвоним на него и авторизируем вас в программе."</string>
    <string name="dialog_105_title">Проверка номера телефона</string>
    <string name="dialog_check_number_error_text">Не удалось проверить номер телефона</string>
    <string name="dialog_check_number_error_title">Ошибка</string>
    <string name="dialog_list_title">В каком городе вы находитесь?</string>
    <string name="dialog_params_loading_error_text">Информация с сервера получена с ошибками, попробуйте позже</string>
    <string name="dialog_params_loading_error_title">Ошибка</string>
    <string name="dialog_params_loading_ok_button">Повторить</string>
    <string name="dialog_params_may_update_cancel_button">Нет, спасибо</string>
    <string name="dialog_params_may_update_ok_button">Обновить</string>
    <string name="dialog_params_may_update_text">В Google Play доступна новая версия приложения</string>
    <string name="dialog_params_may_update_title">Обновление</string>
    <string name="dialog_params_need_update_cancel_button">Выход</string>
    <string name="dialog_params_need_update_ok_button">Перейти в Google Play</string>
    <string name="dialog_params_need_update_text">Приложение устарело, необходимо обновить его из Google Play</string>
    <string name="dialog_params_need_update_title">Обновление</string>
    <string name="dialog_price_details_final_price">%1$d₸</string>
    <string name="drawer_close">Меню закрыт</string>
    <string name="drawer_open">Меню открыт</string>
    <string name="driver_is_late">Водитель опаздывает</string>
    <string name="driver_is_late2">Опаздывает</string>
    <string name="driver_is_stack">Водитель завис</string>
    <string name="driver_is_waiting">Водитель ожидает вас на месте</string>
    <string name="dummy_button">Обновить</string>
    <string name="dummy_content">"Ваша версия устарела,
 необходимо обновиться"</string>
    <string name="empty_field">Поле не может быть пустым</string>
    <string name="error">Ошибка</string>
    <string name="exit">Выход</string>
    <string name="exit.from.account">Выход из аккаунта</string>
    <string name="fill.all.fields">Необходимо заполнить все поля</string>
    <string name="fill_address_field_error">Необходимо заполнить поля адрес</string>
    <string name="fontello_logo"></string>
    <string name="fontello_password"></string>
    <string name="fontello_user"></string>
    <string name="gcm.sender.id">554269045691</string>
    <string name="gcm_defaultSenderId">554269045691</string>
    <string name="get_password_btn_hint">Получить пароль</string>
    <string name="home_number_hint">Номер дома</string>
    <string name="incorrect_password">Введите 4-значный код, который мы вам отправили</string>
    <string name="internet_connection_problem">Проблемы соединения с сервером</string>
    <string name="intro_text">Taxikz - удобное приложение для заказа такси</string>
    <string name="invalid_number">Некорректный номер телефона</string>
    <string name="last_address_hint">Последние адреса</string>
    <string name="login_register_caption">Зарегистрироваться</string>
    <string name="login_signin_caption">Войти</string>
    <string name="make_order">Вызвать такси</string>
    <string name="make_order_dialog_content_success">Ваша заявка принята, ожидайте звонка</string>
    <string name="make_order_dialog_title_success">Успешно</string>
    <string name="material_icon_account"></string>
    <string name="material_icon_city"></string>
    <string name="material_icon_email"></string>
    <string name="material_icon_flag"></string>
    <string name="material_icon_password"></string>
    <string name="minute_caption">мин.</string>
    <string name="name">Имя</string>
    <string name="name_caption">Ваше имя</string>
    <string name="name_edit_dialog_message">Укажите имя того, кто будет встречать машину.</string>
    <string name="name_edit_dialog_title">Изменить имя</string>
    <string name="name_error">Введите ваше имя</string>
    <string name="navigation_exit_alert_message">Вы действительно хотите выйти из аккаунта?</string>
    <string name="navigation_phone_pre">+7%1$s</string>
    <string name="need.internet.connection">Для работы приложения необходимо интернет соединение.</string>
    <string name="network.error.repeat">Неполадки с сетью, пожалуйста повторите попытку.</string>
    <string name="network_error_message">Интернет соединение потеряно</string>
    <string name="newprice">%1$d ₸</string>
    <string name="newprice_bonus_info">(-%1$s бонусов)</string>
    <string name="no">Нет</string>
    <string name="no_current_orders_message">У вас нет текущих заказов</string>
    <string name="no_current_orders_message2">Нет активных заказов</string>
    <string name="not_now">Не сейчас</string>
    <string name="not_refered_caption">Не указано</string>
    <string name="notes_caption">Примечания</string>
    <string name="notification.title.arrived">К вам подъедет</string>
    <string name="notification_title_state_12">К вам подъехал</string>
    <string name="notification_title_unknown">Уведомление</string>
    <string name="ok">ОК</string>
    <string name="oops">Упс, что-то пошло не так</string>
    <string name="order.canceled">Заказ успешно отменен</string>
    <string name="order.is.on.work">Заказ в работе</string>
    <string name="order.state">Статус заказа</string>
    <string name="order_add_stay_button">Добавить остановку</string>
    <string name="order_address_details_template">Дом %1$s</string>
    <string name="order_address_details_with_porch_template">Дом %1$s, Подъезд %2$s</string>
    <string name="order_address_end_address_placeholder">Куда</string>
    <string name="order_address_start_address_placeholder">Откуда</string>
    <string name="order_address_stay_address_placeholder">Остановка</string>
    <string name="policy_button_text">Политика конфиденциальности</string>
    <string name="send">Отзыв</string>
    <string name="share">Поделиться</string>
    <string name="sign_in">Войти</string>
    <string name="title_activity_news">Новости</string>
    <string name="wait_call">Ожидание звонка…</string>
</resources>