<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/primary"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_city"
            android:checked="true"
            android:icon="@drawable/ic_location_city"
            android:title="@string/choice_town" />
        <item
            android:id="@+id/nav_news"
            android:checkable="false"
            android:icon="@drawable/ic_news"
            android:title="@string/title_activity_news" />
        <item
            android:id="@+id/nav_about"
            android:checkable="false"
            android:icon="@drawable/ic_info"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_exit"
            android:checkable="false"
            android:icon="@drawable/logout"
            android:title="@string/exit" />
    </group>
    <group
        android:id="@+id/communicate"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share"
            android:checkable="false"
            android:icon="@drawable/ic_share"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_send"
            android:checkable="false"
            android:icon="@drawable/ic_send"
            android:title="@string/send" />
    </group>
</menu>