<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1.0"
    android:orientation="vertical"
    android:padding="16.0dip">

    <com.devspark.robototextview.widget.RobotoTextView
        style="@style/Dialog.Title"
        android:layout_width="@dimen/dialog_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48.0dip"
        android:gravity="center_horizontal"
        android:text="@string/activation_got_code"
        app:typeface="roboto_condensed_regular" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="@dimen/dialog_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32.0dip"
        android:gravity="center_horizontal"
        android:paddingBottom="12.0dip">

        <EditText
            android:id="@+id/edit_text_password"
            style="@style/CodeTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="bottom|center|left"
            android:hint="@string/activation_enter_code_hint"
            android:inputType="numberPassword"
            android:maxLength="4">

            <requestFocus />
        </EditText>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_continue"
        style="@style/orangeButton"
        android:layout_width="@dimen/dialog_width"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_in"
        android:textSize="@dimen/about_text_size" />

    <FrameLayout
        android:layout_width="@dimen/dialog_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:id="@+id/countdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <com.devspark.robototextview.widget.RobotoTextView
                style="@style/ActivationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="34.0dip"
                android:gravity="center_horizontal"
                android:text="@string/activation_code_sms_sent" />

            <com.devspark.robototextview.widget.RobotoTextView
                style="@style/ActivationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17.0dip"
                android:gravity="center_horizontal"
                android:text="@string/activation_code_sms_wait"
                app:typeface="roboto_condensed_regular" />

            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/text_countdown"
                style="@style/RegistrationTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8.0dip"
                android:gravity="center_horizontal"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/get_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.devspark.robototextview.widget.RobotoTextView
                style="@style/ActivationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16.0dip"
                android:layout_marginRight="16.0dip"
                android:layout_marginTop="54.0dip"
                android:gravity="center_horizontal"
                android:text="@string/activation_code_call_get_txt"
                app:typeface="roboto_condensed_regular" />

            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/btn_sms_get"
                style="@style/orangeButton"
                android:layout_width="180.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12.0dip"
                android:gravity="center"
                android:minHeight="48.0dip"
                android:text="@string/activation_sms_code_btn"
                android:textColor="@android:color/white"
                android:textSize="@dimen/about_text_size"
                app:typeface="roboto_condensed_regular" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>