<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="75.0dip"
        android:layout_height="75.0dip"
        android:layout_marginTop="48.0dip"
        android:contentDescription="@null"
        app:srcCompat="@drawable/ic_launcher_taxikz" />

    <com.devspark.robototextview.widget.RobotoTextView
        android:id="@+id/device_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13.0dip"
        android:text="@string/activate_secondary_device"
        android:textColor="@color/colorPrimary"
        android:textSize="18.0sp"
        android:visibility="gone" />

    <com.devspark.robototextview.widget.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66.0dip"
        android:text="@string/wait_call"
        android:textColor="@color/secondaryText"
        android:textSize="16.0sp" />

    <com.devspark.robototextview.widget.RobotoTextView
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21.0dip"
        android:text="0"
        android:textColor="@color/colorPrimary"
        android:textSize="40.0sp" />

    <com.devspark.robototextview.widget.RobotoTextView
        android:id="@+id/device_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21.0dip"
        android:gravity="center_horizontal"
        android:text="@string/activate_secondary_enter"
        android:textColor="@color/secondaryText"
        android:textSize="16.0sp"
        android:visibility="gone" />

    <com.devspark.robototextview.widget.RobotoTextView
        android:id="@+id/click_here"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="32.0dip"
        android:gravity="bottom|center"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip"
        android:textColor="@color/secondaryText"
        android:textSize="12.0sp" />
</LinearLayout>