<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/background"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8.0dip"
        app:cardCornerRadius="0.0dip"
        app:cardElevation="4.0dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icon_imageView"
                    android:layout_width="@dimen/address_fragment_default_item_icon_size"
                    android:layout_height="@dimen/address_fragment_default_item_icon_size"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/address_fragment_default_item_icon_marginLR"
                    android:layout_marginRight="@dimen/address_fragment_default_item_icon_marginLR"
                    android:src="@mipmap/address_location"
                    android:tint="@color/secondaryText" />

                <EditText
                    android:id="@+id/address_editText"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.0"
                    android:background="@android:color/transparent"
                    android:hint="@string/address_fragment_address_hint"
                    android:inputType="text"
                    android:paddingBottom="16.0dip"
                    android:paddingTop="16.0dip"
                    android:textSize="16.0sp" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="8.0dip"
                    android:layout_marginRight="8.0dip">

                    <com.wang.avi.AVLoadingIndicatorView
                        android:id="@+id/autocomplete_loading"
                        style="@style/AVLoadingIndicatorView.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="invisible"
                        app:indicatorColor="@color/colorPrimary"
                        app:indicatorName="BallClipRotateIndicator" />

                    <ImageView
                        android:id="@+id/clear_address_imageView"
                        android:layout_width="32.0dip"
                        android:layout_height="32.0dip"
                        android:layout_gravity="center"
                        android:background="@drawable/order_close_button"
                        android:clickable="true"
                        android:padding="6.0dip"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/close_icon"
                        android:tint="@color/colorRed"
                        android:visibility="invisible" />
                </FrameLayout>
            </LinearLayout>

            <View
                android:id="@+id/address_details_divider"
                android:layout_width="match_parent"
                android:layout_height="1.0dip"
                android:background="@color/divider" />

            <LinearLayout
                android:id="@+id/address_details_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible">

                <ImageView
                    android:layout_width="@dimen/address_fragment_default_item_icon_size"
                    android:layout_height="@dimen/address_fragment_default_item_icon_size"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/address_fragment_default_item_icon_marginLR"
                    android:layout_marginRight="@dimen/address_fragment_default_item_icon_marginLR"
                    android:src="@mipmap/address_house_icon"
                    android:tint="@color/secondaryText" />

                <EditText
                    android:id="@+id/address_house_editText"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.0"
                    android:background="@android:color/transparent"
                    android:hint="@string/address_fragment_house_hint"
                    android:inputType="text"
                    android:maxLength="5"
                    android:paddingBottom="16.0dip"
                    android:paddingTop="16.0dip"
                    android:textSize="16.0sp" />

                <ImageView
                    android:id="@+id/address_porch_icon_imageView"
                    android:layout_width="@dimen/address_fragment_default_item_icon_size"
                    android:layout_height="@dimen/address_fragment_default_item_icon_size"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/address_fragment_default_item_icon_marginLR"
                    android:layout_marginRight="@dimen/address_fragment_default_item_icon_marginLR"
                    android:src="@mipmap/address_porch_icon"
                    android:tint="@color/secondaryText" />

                <EditText
                    android:id="@+id/address_porch_editText"
                    android:layout_width="96.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:hint="@string/address_fragment_porch_hint"
                    android:inputType="number"
                    android:maxLength="5"
                    android:paddingBottom="16.0dip"
                    android:paddingTop="16.0dip"
                    android:textSize="16.0sp" />
            </LinearLayout>

            <Button
                android:id="@+id/select_address_button"
                android:layout_width="match_parent"
                android:layout_height="56.0dip"
                android:layout_marginTop="8.0dip"
                android:text="@string/address_fragment_select_button"
                android:theme="@style/AppTheme.Button.Default"
                android:visibility="gone" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/addresses_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8.0dip" />
</LinearLayout>